--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo {
@@ -8,12 +11,24 @@
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  margin: 20px;
+}
+
+.left-links{
+  justify-self: flex-end;
+  flex: 1;
+}
+
+.right-links{
+  justify-self: flex-start;
+  flex: 1;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  margin: 0;
 }
 
 a {
@@ -22,4 +37,5 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  margin: 8px;
 }
