--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -2,27 +2,18 @@
   font-family: monospace;
   background: papayawhip;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
   font-size: 48px;
   font-weight: 900;
   color: tomato;
-  background: white;
   margin: 20px;
+  background-color: white;
 }
 
-.left-links{
-  justify-self: flex-end;
-  flex: 1;
-}
-
-.right-links{
-  justify-self: flex-start;
-  flex: 1;
-}
 
 ul {
   /* this removes the dots on the list items*/
