--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -37,12 +37,34 @@ button {
   padding: 8px 24px;
 }
 
+
+
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  flex: 1;
 }
 
 ul {
   list-style-type: none;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+}
+
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
