--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -20,10 +20,51 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex: 1;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+.main{
+  display: flex;
+  flex: 1;
+}
+
+a{
+  color: white;
+  text-decoration: none;
+}
+
+ul{
+  list-style-type: none;
+}
+
+body{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.cards{
+  display: flex;
+  flex: 4;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.card1,.card2{
+  display: flex;
+  flex: 1;
+  gap: 10px;
+}
+
+.card{
+  flex: 1;
+  gap: 10px;
 }
